--- a/about.html
+++ b/about.html
@@ -3,8 +3,16 @@
 <head>
   <title>Susan Smith For Town Council</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+  <header>
+    <h1>Susan Smith</h1>
+    <h2>For Town Council</h2>
+  </header>
+  <div id="maincolumn">
+    <h1> About</h1>
   Born and Raised Here
 
   Food truck Thundercats kale chips photo booth paleo. Banh mi four loko fingerstache cray. Hashtag fingerstache plaid umami, tofu VHS cronut Banksy health goth Blue Bottle cold-pressed readymade viral literally. Cliche sartorial direct trade craft beer, typewriter master cleanse slow-carb twee sriracha tousled fanny pack fap Bushwick. Bespoke Echo Park fanny pack retro. Stumptown crucifix meggings, Tumblr 3 wolf moon plaid leggings High Life lumbersexual meditation direct trade. McSweeney's sustainable Wes Anderson, bicycle rights Williamsburg umami Schlitz Blue Bottle vinyl cred cronut aesthetic tote bag YOLO ugh.
@@ -19,5 +27,6 @@
     * Pitchfork selfies fashion axe tote bag
     * Bitters blog slow-carb Wes Anderson freegan
     * Sriracha you probably haven't heard of them
+</div>
 </body>
 </html>
