--- a/issues.html
+++ b/issues.html
@@ -3,8 +3,16 @@
 <head>
   <title>Susan Smith For Town Council</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+  <header>
+    <h1>Susan Smith</h1>
+    <h2>For Town Council</h2>
+  </header>
+  <div id="maincolumn">
+    <h1> Issues </h1>
   Restoring Economic Prosperty
 
   Pug cornhole locavore messenger bag, freegan master cleanse small batch biodiesel. Mumblecore Bushwick cliche post-ironic. Sartorial High Life cornhole umami you probably haven't heard of them. Try-hard street art flexitarian heirloom High Life. Brunch PBR four loko pug tousled butcher. Banh mi vinyl shabby chic, typewriter roof party meh food truck vegan swag flannel. Street art readymade sriracha, fingerstache jean shorts selfies retro ennui.
@@ -19,6 +27,6 @@
   Security For Everyone
 
   Tousled bicycle rights Schlitz swag, artisan gluten-free cardigan typewriter High Life four loko drinking vinegar small batch art party readymade +1. Williamsburg church-key readymade twee, plaid slow-carb Tumblr Wes Anderson iPhone taxidermy cronut heirloom. Wes Anderson post-ironic ennui, wolf pug lumbersexual before they sold out disrupt. Mlkshk Tumblr Brooklyn gluten-free fingerstache. Trust fund paleo PBR master cleanse occupy wayfarers jean shorts, meggings Thundercats flexitarian. Roof party Helvetica iPhone, church-key paleo direct trade Odd Future mumblecore pop-up. IPhone Intelligentsia readymade, next level 8-bit post-ironic occupy.
-
+</div>
 </body>
 </html>
