--- a/issues.html
+++ b/issues.html
@@ -10,6 +10,7 @@
   <header>
     <h1>Susan Smith</h1>
     <h2>For Town Council</h2>
+  <h3>The Change We Need</h3>
   </header>
   <div id="maincolumn">
     <h1> Issues </h1>
